--- a/21_valid_markup/index.html
+++ b/21_valid_markup/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 
 <head>
-  <link href="css/bootstrap.css" rel="stylesheet">
+  <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/stylish-portfolio.css" rel="stylesheet">
 
   <!-- Custom Fonts -->
@@ -185,7 +185,7 @@
   </footer>
 
 
-<script src="js/jquery-1.12.4.min.js"></script>
+<script src="js/jquery.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU"></script>  
 
